# game_system

./: Cargo.toml  README.md
examples/: core_backend_test.rs  test_backend.rs  ui_0_layout.rs  ui_1_texture.rs  ui_2_border.rs  ui_3_label.rs  ui_4_background.rs  ui_5_checkbox.rs  ui_6_button.rs  z_core_backend_test.rs
examples/example_common/: gui_loop.rs
src/: lib.rs
src/backends/: mod.rs
src/backends/rust_sdl2/: font.rs  mod.rs  texture_key.rs
src/core/: clipping_rect.rs  color.rs  event.rs  mod.rs  texture_area.rs  texture_rect.rs
src/core/backends/: mod.rs
src/core/backends/rust_sdl2/: cache_checker.rs  font.rs  math.rs  mod.rs  texture_key.rs  texture_wrapper.rs
src/ui/: mod.rs
src/ui/layout/: clipper.rs  horizontal_layout.rs  mod.rs  scroller.rs  vertical_layout.rs
src/ui/util/: aspect_ratio.rs  length.rs  mod.rs  rect.rs  shuffle.rs
src/ui/widget/: background.rs  border.rs  button.rs  checkbox.rs  clipper.rs  debug.rs  horizontal_layout.rs  image_display.rs  mod.rs  multi_line_label.rs  scroller.rs  single_line_label.rs  sizing.rs  slot.rs  strut.rs  texture.rs  tiled_image_display.rs  tiled_texture.rs  vertical_layout.rs
