[package]
name = "game_system"
version = "0.1.0"
edition = "2021"

[dependencies]
# waiting on PRs
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev="c242701", features = [], optional = true }

lru = {version = "0.13.0", optional = true}
typed_floats = "1.0.2"

[features]
default = [ ]
rust-sdl2 = ["dep:sdl2", "sdl2/unsafe_textures", "sdl2/mixer", "sdl2/image", "sdl2/ttf", "dep:lru"]
rust-sdl2-bundled = ["sdl2/bundled"]
